<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <Button
        android:id="@+id/mBuGoback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="goBackToProfile"
        android:text="@string/go_back_to_profile" />

    <Button
        android:id="@+id/mBuRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="wsRequest"
        android:text="@string/made_ws_request" />

    <com.google.android.material.textfield.TextInputLayout
        android:paddingTop="24dp"
        android:hint="@string/user"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mTvUserName"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:paddingTop="24dp"
        android:text="@string/age"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mTvAge"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
